--- a/forgot-password.html
+++ b/forgot-password.html
@@ -54,7 +54,7 @@
                     <span class="spin"></span>
                 </div>
                 <div class="button login button-1">
-                    <button onclick="location.href = 'admin.html';">
+                    <button onclick="location.href = 'index.html';">
                         <span>Send</span>
                         <i class="fa fa-check"></i>
                     </button>
