--- a/create-vendor.html
+++ b/create-vendor.html
@@ -68,7 +68,7 @@
             <div class="header-wrapper row m-0">
                 <div class="header-logo-wrapper col-auto p-0">
                     <div class="logo-wrapper">
-                        <a href="admin.html">
+                        <a href="index.html">
                             <img class="img-fluid main-logo" src="assets/images/logo/logo.png" alt="logo">
                             <img class="img-fluid white-logo" src="assets/images/logo/logo-white.png" alt="logo">
                         </a>
@@ -254,7 +254,7 @@
             <div class="sidebar-wrapper">
                 <div>
                     <div class="logo-wrapper logo-wrapper-center">
-                        <a href="admin.html" data-bs-original-title="" title="">
+                        <a href="index.html" data-bs-original-title="" title="">
                             <img class="img-fluid for-dark" src="assets/images/logo/logo-white.png" alt="">
                         </a>
                         <div class="back-btn">
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                     <div class="logo-icon-wrapper">
-                        <a href="admin.html">
+                        <a href="index.html">
                             <img class="img-fluid main-logo" src="assets/images/logo/logo.png" alt="logo">
                         </a>
                     </div>
@@ -285,7 +285,7 @@
                                 </li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title link-nav" href="admin.html">
+                                    <a class="sidebar-link sidebar-title link-nav" href="index.html">
                                         <i data-feather="home"></i>
                                         <span>Dashboard</span>
                                     </a>
