--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
                             <a href="forgot-password.html" class="pass-forgot">Forgot your password?</a>
 
                             <div class="button login">
-                                <button onclick="location.href = 'admin.html';">
+                                <button onclick="location.href = 'index.html';">
                                     <span>Log In</span>
                                     <i class="fa fa-check"></i>
                                 </button>
