--- a/sign-up.html
+++ b/sign-up.html
@@ -78,7 +78,7 @@
                             </div>
 
                             <div class="button login">
-                                <button onclick="location.href = 'admin.html';">
+                                <button onclick="location.href = 'index.html';">
                                     <span>Sign Up</span>
                                     <i class="fa fa-check"></i>
                                 </button>
