--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="header-wrapper row m-0">
                 <div class="header-logo-wrapper col-auto p-0">
                     <div class="logo-wrapper">
-                        <a href="index.html">
+                        <a href="https://gizmoholicph.store/">
                             <img class="img-fluid main-logo" src="assets/images/logo.png" alt="logo">
                             <img class="img-fluid white-logo" src="assets/images/logo.png" alt="logo">
                         </a>
@@ -258,7 +258,7 @@
             <div class="sidebar-wrapper">
                 <div>
                     <div class="logo-wrapper logo-wrapper-center">
-                        <a href="index.html" data-bs-original-title="" title="">
+                        <a href="https://gizmoholicph.store/" data-bs-original-title="" title="">
                             <img class="img-fluid for-dark" src="assets/images/gizmoicon.png" alt="">
                         </a>
                         <div class="back-btn">
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                     <div class="logo-icon-wrapper">
-                        <a href="index.html">
+                        <a href="https://gizmoholicph.store/">
                             <img class="img-fluid main-logo" src="assets/images/logo.png" alt="logo">
                         </a>
                     </div>
