--- a/products.html
+++ b/products.html
@@ -581,7 +581,7 @@
 
                                                     <tr>
                                                         <td>
-                                                            <img src="assets/images/profile/3.jpg" class="img-fluid"
+                                                            <img src="assets/images/products/apple/Apple-iPhone-13/1.jpeg" class="img-fluid"
                                                                 alt="">
                                                         </td>
 
